# Sona

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
CMake/: HandleQt.cmake  SetupConfig.cmake
Source/Application/: CMakeLists.txt  Editor.cpp
Source/Application/Core/: Core.h
Source/Application/Core/Project/: Project.h
Source/Application/QTUtils/Audio/Playback/: AudioPlayback.cpp  AudioPlayback.h
Source/Application/QTUtils/Helper/: UI.h
Source/Application/QTUtils/Main/: MainWindow.cpp  MainWindow.h
Source/Application/QTUtils/Model/: Hierarchy.cpp  Hierarchy.h
Source/Application/QTUtils/Panel/: Inspector.cpp  Inspector.h
Source/Application/QTUtils/Proxy/: FileFilter.h
Source/Application/QTUtils/View/: ContentBrowser.cpp  ContentBrowser.h  Scene.cpp  Scene.h
Source/Application/QTUtils/Widgets/Editor/: EditorWidget.cpp  EditorWidget.h
Source/Application/QTUtils/Widgets/Timeline/: TimelineView.cpp  TimelineView.h
Source/Application/QTUtils/Widgets/Waveform/: WaveformView.cpp  WaveformView.h
